<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="demodata">{\"listaResultados\":[ {\"planDescripcion\":\"Ing.Téc.Industrial.Esp.: Química Industrial\",\"centroDescripcion\":\"Facultad de Ciencias\",\"estudioDescripcion\":\"Ingeniero Técnico Industrial\",\"creditosSuperados\":46.0,\"creditosTotalesPlan\":220.0,\"calificaciones\":[{\"tipoAsignatura\":\"Troncal\",\"creditos\":6.0,\"asignatura\":\"ÁLGEBRA\",\"calificacion\":\"Suspenso\",\"codCalificacion\":\"S\",\"presentaExamen\":true,\"superada\":false,\"time\":1297033200000,\"timeRevision\":1297465200000,\"convocatoria\":\"Febrero\",\"numConvocatoria\":1,\"nota\":4.0,\"provisional\":true,\"lugarRevision\":\"Aula 34\",\"horaRevision\":\"08:20\",\"anoAcademico\":\"2010/11-0\"},{\"tipoAsignatura\":\"Troncal\",\"creditos\":6.0,\"asignatura\":\"CÁLCULO\",\"calificacion\":\"Notable\",\"codCalificacion\":\"N\",\"presentaExamen\":true,\"superada\":true,\"time\":1296774000000,\"timeRevision\":1297724400000,\"convocatoria\":\"Febrero\",\"numConvocatoria\":1,\"nota\":7.1,\"provisional\":true,\"lugarRevision\":\"Despacho 230 \",\"horaRevision\":\"10:30\",\"anoAcademico\":\"2010/11-0\"},{\"tipoAsignatura\":\"Troncal\",\"creditos\":6.0,\"asignatura\":\"QUÍMICA ANALÍTICA\",\"calificacion\":\"Aprobado\",\"codCalificacion\":\"A\",\"presentaExamen\":true,\"superada\":true,\"time\":1296774000000,\"timeRevision\":1297292400000,\"convocatoria\":\"Febrero\",\"numConvocatoria\":1,\"nota\":6.5,\"provisional\":true,\"lugarRevision\":\"Laboratorio Química An. \",\"horaRevision\":\"09:00\",\"anoAcademico\":\"2010/11-0\"},{\"tipoAsignatura\":\"Optativa\",\"creditos\":6.0,\"asignatura\":\"ELECTROQUÍMICA INDUSTRIAL\",\"calificacion\":\"No consume\",\"codCalificacion\":\"NN\",\"presentaExamen\":false,\"superada\":false,\"time\":1284674400000,\"timeRevision\":0,\"convocatoria\":\"Septiembre\",\"numConvocatoria\":2,\"nota\":0.0,\"provisional\":false,\"anoAcademico\":\"2009/10-0\"},{\"tipoAsignatura\":\"Troncal\",\"creditos\":6.0,\"asignatura\":\"FÍSICA I\",\"calificacion\":\"Aprobado\",\"codCalificacion\":\"A\",\"presentaExamen\":true,\"superada\":true,\"time\":1235343600000,\"timeRevision\":0,\"convocatoria\":\"Febrero\",\"numConvocatoria\":1,\"nota\":5.3,\"provisional\":false,\"anoAcademico\":\"2008/09-0\"}]}, {\"planDescripcion\":\"Graduado/a en Física\",\"centroDescripcion\":\"Facultad de Ciencias\",\"estudioDescripcion\":\"Grado en Física\",\"creditosSuperados\":24.0,\"creditosTotalesPlan\":240.0,\"calificaciones\":[{\"tipoAsignatura\":\"Formación básica\",\"creditos\":6.0,\"asignatura\":\"FUNDAMENTOS DE FÍSICA II\u0009\",\"calificacion\":\"Suspenso\",\"codCalificacion\":\"S\",\"presentaExamen\":true,\"superada\":false,\"time\":1296774000000,\"timeRevision\":0,\"convocatoria\":\"Enero\",\"numConvocatoria\":1,\"nota\":2.6,\"provisional\":false,\"lugarRevision\":\" \",\"horaRevision\":\" \",\"anoAcademico\":\"2010/11-0\"}]} ], \"alumno\": {\"nia\":236996,\"documento\":\"5446402\",\"nombre\":\"Andres\",\"apellido1\":\"Pacheco\",\"apellido2\":\"Paniagua\"}, \"error\":0}</string>
    <string name="prompt_user_name">"NIF (DNI/NIE)"</string>
    <string name="prompt_password">"Contraseña"</string>
    <string name="action_sign_in">"Iniciar sesión"</string>
    <string name="login_progress_signing_in">"Conectando…"</string>
    <string name="language_code_default">default</string>
    <string name="language_code_spanish">es</string>
    <string name="language_code_english">en</string>
    <string name="language_code_basque">eu</string>
    <string name="error_invalid_id">"El NIF es inválido"</string>
    <string name="error_invalid_password">"La contraseña es demasiado corta"</string>
    <string name="error_incorrect_password">"La contraseña es incorrecta"</string>
    <string name="error_field_required">"Este campo no puede estar vacio"</string>
    <string name="app_name">"Notas UPNA"</string>
    <string name="record_title">"Expediente"</string>
    <string name="login_title">"Iniciar sesión"</string>
    <string name="preferences">"Opciones"</string>
    <string name="confirm">"Confirmar"</string>
    <string name="cancel">"Cancelar"</string>
    <string name="ok">"OK"</string>
    <string name="header_credits">"Creditos totales: "</string>
    <string name="subject_year">"Curso: "</string>
    <string name="subject_credits">"Créditos: "</string>
    <string name="subject_type">"Tipo: "</string>
    <string name="subject_grade_name">"Calificación: "</string>
    <string name="subject_grade">"Nota: "</string>
    <string name="subject_taken">"Realizado: "</string>
    <string name="subject_calls_taken">"Convocatorias gastadas: "</string>
    <string name="subject_passed">"Aprobado: "</string>
    <string name="subject_call">"Convocatoria: "</string>
    <string name="subject_call_number">"Num convocatoria: "</string>
    <string name="no_new_data">"No hay notas nuevas."</string>
    <string name="upna_logo_description">"Logo UPNA"</string>
    <string name="call_unknown">"Desconocido"</string>
    <string name="subject_time">"Fecha: "</string>
    <string name="subject_provisional">"Provisional: "</string>
    <string name="subject_revision_time">"Revisión: "</string>
    <string name="loading_data">"Cargando datos…"</string>
    <string name="no">"No"</string>
    <string name="yes">"Sí"</string>
    <string name="no_revision_time">"No hay fecha de revisión."</string>
    <string name="spanish">"Castellano"</string>
    <string name="basque">"Euskara"</string>
    <string name="english">"English"</string>
    <string name="dialog_change_language">"Has cambiado el idioma. ¿Quieres descargar los datos de las asignaturas en castellano?"</string>
    <string name="preferences_category_general">"General"</string>
    <string name="preference_sort_order">"Orden de las asignaturas"</string>
    <string name="preference_record_language">"record_language"</string>
    <string name="preference_app_language">"app_language"</string>
    <string name="last_update">"Última actualización"</string>
    <string formatted="false" name="share_grade">"Ha salido la nota de %s. He tenido un %s, %s."</string>
    <string name="header_nif">"NIF: "</string>
    <string name="header_nia">"NIA: "</string>
    <string name="default_language">"Lenguaje del sistema"</string>
    <string name="default_language_used">"Se va a utilizar el lenguaje por defecto del dispositivo."</string>
    <string name="error_login">"Error al iniciar sesión, asegurese de introducir correctamente usuario y contraseña"</string>
    <string name="error_grades">"Hay un error desconocido en los datos."</string>
    <string name="error_connecting">"Error al intentar establecer conexión con el servidor. Inténtelo más tarde."</string>
    <string name="error_downloading">"Ha habido un error en la descarga de los datos."</string>
    <string name="share_grade_title">"Nueva nota"</string>
    <string name="facebook_grade_published">"Mensaje publicado en el muro."</string>
    <string name="facebook_error">"Error al intentar publicar. Inténtalo más tarde"</string>
    <string name="notification_ticker">"Hay nuevas notas"</string>
    <string name="notification_title">"Nuevas notas"</string>
    <string name="service_title">"Servicio de actualización de notas"</string>
    <string name="not_available">"No disponible"</string>
    <string name="share_on_facebook">"Compartir en facebook"</string>
    <string name="other_calls">"Otras convocatorias"</string>
    <string name="dialog_connect">"Conectando al servidor seguro"</string>
    <string name="share">"Compartir"</string>
    <string name="dialog_parse">"Descargando expediente"</string>
    <string name="record">"Expediente"</string>
    <string name="mode_checkonly_summary">"Permite consultas sin guardar los datos en el teléfono ni borrar los existentes."</string>
    <string name="about">"Autor: Denís Lapuente
Contacto: lapuente.denis@gmail.com
Universidad Pública de Navarra UPNA"</string>
    <string name="passed_total_credits">"Creditos superados/totales"</string>
    <string name="login_text">"Tu expediente"</string>
    <string name="close_session">"Cerrar sesión"</string>
    <string name="dialog_close_session">"Va a borrar los datos de la aplicación en el teléfono. Esto supondrá tener que volver a descargarlos cuando quiera consultar de nuevo. Para salir sin borrar los datos pulse el botón \"Atrás\"."</string>
    <string name="language">"Cambiar idioma"</string>
    <string name="language_summary">"Elija en que idioma desea usar la aplicación"</string>
    <string name="language_not_supported">"El expediente no está disponible en el idioma seleccionado. Elija en que idioma quiere verlo."</string>
    <string name="sort_order_alpha_asc">"Ordenar alfabéticamente (ascendente)"</string>
    <string name="sort_order_alpha_desc">"Ordenar alfabéticamente (descendente)"</string>
    <string name="sort_order_time_asc">"Ordenar por fecha (ascendente)"</string>
    <string name="sort_order_time_desc">"Ordenar por fecha (descendente)"</string>
    <string name="sort_order_alpha_asc_value">"su_name asc"</string>
    <string name="sort_order_alpha_desc_value">"su_name desc"</string>
    <string name="sort_order_time_asc_value">"gr_time asc"</string>
    <string name="sort_order_time_desc_value">"gr_time desc"</string>
    <string name="sort_order_summary">"Elegir el orden de las asignaturas"</string>
    <string name="update_10_minutes">"10 minutos"</string>
    <string name="update_12_hour">"12 horas"</string>
    <string name="update_15_minutes">"15 minutos"</string>
    <string name="update_1_hour">"Una hora"</string>
    <string name="update_24_hour">"24 horas"</string>
    <string name="update_1_week">"Una semana"</string>
    <string name="update_5_minutes">"5 minutos"</string>
    <string name="update_6_hour">"6 horas"</string>
    <string name="update_no">"Solo actualizaciones manuales"</string>
    <string name="update_half_hour">"Media hora"</string>
    <string name="update_2_hour">"2 horas"</string>
    <string name="update_10_minutes_value">"600000"</string>
    <string name="update_12_hour_value">"43200000"</string>
    <string name="update_15_minutes_value">"900000"</string>
    <string name="update_1_hour_value">"3600000"</string>
    <string name="update_24_hour_value">"86400000"</string>
    <string name="update_1_week_value">"604800000"</string>
    <string name="update_5_minutes_value">"300000"</string>
    <string name="update_6_hour_value">"21600000"</string>
    <string name="update_no_value">"0"</string>
    <string name="update_half_hour_value">"1800000"</string>
    <string name="update_2_hour_value">"7200000"</string>
    <string name="update_time_summary">"Elegir cada cuanto se actualizarán automáticamente las notas"</string>
    <string name="update_time">"Intervalo de actualización"</string>
    <string name="error_parsing">"Error en las notas. Descargue de nuevo los datos."</string>
    <string name="login_no_password">"No has introducido ninguna contraseña. Introduce una para poder acceder."</string>
    <string name="error_connection">"Hay un problema con su conexión a internet. Asegurese de estar conectado"</string>
    <string name="clean_data">"Cerrar sesión"</string>
    <string name="clean_data_summary">"Borra los datos de la aplicación en el teléfono."</string>
    <string name="subject">"Asignatura"</string>
    <string name="about_title">"Acerca de…"</string>
    <string name="about_summary">"Información del autor"</string>
    <string name="refresh">"Actualizar"</string>
    <string name="subject_total_calls">"Registros: "</string>
    <string name="record_details_select_item">"Elige un elemento de la lista."</string>
</resources>
