<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/details_subject_block"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:clickable="true"
	    android:orientation="vertical" >
	    
	    <TextView
	        android:id="@+id/details_subject_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_margin="10dp"
	        style="@style/subject_name" />
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	
	        <TextView
	            android:id="@+id/details_subject_type"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:paddingRight="10dp"
	            android:layout_weight="1" />
	
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/subject_credits" />
	        
	        <TextView
	            android:id="@+id/details_subject_credits"
	            android:layout_width="30dp"
	            android:layout_height="wrap_content"
	            android:paddingRight="10dp" />
	
	    </LinearLayout>
	</LinearLayout>

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/details_subject_separator" />
    
    <ScrollView
        android:id="@+id/details_grade_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp" >

        <TableLayout
            android:id="@+id/details_grade_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/details_row_grade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/subject_grade" />

                <TextView
                    android:id="@+id/details_grade_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:gravity="right" />

            </TableRow>

            <TableRow
                android:id="@+id/details_row_grade_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/subject_grade_name" />

                <TextView
                    android:id="@+id/details_grade_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:gravity="right" />
            </TableRow>

            <TableRow
                android:id="@+id/details_row_grade_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/subject_time" />

                <TextView
                    android:id="@+id/details_grade_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:gravity="right" />

            </TableRow>

            <TableRow
                android:id="@+id/details_row_grade_revision_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/subject_revision_time" />

                <TextView
                    android:id="@+id/details_grade_revision_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:gravity="right" />

            </TableRow>

            <TableRow
                android:id="@+id/details_row_grade_provisional"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/subject_provisional" />

                <TextView
                    android:id="@+id/details_grade_provisional"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:gravity="right" />

            </TableRow>

            <TableRow
                android:id="@+id/details_row_grade_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/subject_year" />

                <TextView
                    android:id="@+id/details_grade_year"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:gravity="right" />

            </TableRow>

            <TableRow
                android:id="@+id/details_row_grade_call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/subject_call" />

                <TextView
                    android:id="@+id/details_grade_call"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:gravity="right" />

            </TableRow>

            <TableRow
                android:id="@+id/details_row_grade_call_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/subject_call_number" />

                <TextView
                    android:id="@+id/details_grade_call_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:gravity="right" />

            </TableRow>

            <TableRow
                android:id="@+id/details_row_grade_passed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/subject_passed" />

                <TextView
                    android:id="@+id/details_grade_passed"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:gravity="right" />

            </TableRow>

            <TableRow
                android:id="@+id/details_row_grade_taken"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/subject_taken" />

                <TextView
                    android:id="@+id/details_grade_taken"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:gravity="right" />

            </TableRow>
        </TableLayout>

    </ScrollView>

</LinearLayout>